# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.109 2009/05/12 22:13:26 chainsaw Exp $

*audacious-plugins-2.0_beta1 (12 May 2009)

  12 May 2009; <chainsaw@gentoo.org> -audacious-plugins-2.0_alpha1.ebuild,
  +audacious-plugins-2.0_beta1.ebuild:
  Stability is increasing noticeably as we are coming nearer to a final
  release. This beta is however still masked.

  11 May 2009; <chainsaw@gentoo.org> audacious-plugins-1.5.1-r1.ebuild,
  audacious-plugins-1.5.1-r2.ebuild, audacious-plugins-1.5.1-r3.ebuild,
  audacious-plugins-2.0_alpha1.ebuild, audacious-plugins-2.0_alpha3.ebuild:
  Drop musicbrainz dependency once and for all. As per upstream bug #63 by
  Rafał Mużyło. The Makefile variable suggesting the dependency has been
  removed in upstream commit 3166:1ec4aa80d7f9.

*audacious-plugins-2.0_alpha3 (30 Apr 2009)

  30 Apr 2009; <chainsaw@gentoo.org> -audacious-plugins-2.0_alpha2.ebuild,
  +audacious-plugins-2.0_alpha3.ebuild:
  Okay, so maybe there was a little filedescriptor leak in that GIO plugin.
  The third alpha will work better then ever.

*audacious-plugins-2.0_alpha2 (30 Apr 2009)

  30 Apr 2009; <chainsaw@gentoo.org> +audacious-plugins-2.0_alpha2.ebuild:
  Second developer alpha. This uses GIO instead of standard POSIX I/O, so
  files on Samba shares will work now if you use GVFS. A crossfader has been
  added.

*audacious-plugins-2.0_alpha1 (17 Apr 2009)

  17 Apr 2009; <chainsaw@gentoo.org> metadata.xml,
  +audacious-plugins-2.0_alpha1.ebuild:
  Adding alpha 2.0 developer preview under package.mask; bugs go upstream.

  14 Mar 2009; nixnut <nixnut@gentoo.org> audacious-plugins-1.5.1-r3.ebuild:
  ppc stable #247287

  11 Feb 2009; <chainsaw@gentoo.org> audacious-plugins-1.5.1-r3.ebuild:
  Remove obsolete glade dependency as requested by Patrizio Bassi