@@ -7,8 +7,7 @@ DIST audacious-plugins-1.4.4.tgz 3174204 RMD160 2625263c76f806d99973d6726a5e794b
 DIST audacious-plugins-1.4.5.tgz 3176785 RMD160 6aeca88ce90082f4c028e43f2b572398cce7b056 SHA1 9ee0244526f7a2c6bc48f8ca903f4604a1155b43 SHA256 5ffe377f6df0b701c8a7de7bb63c1ba1951b0a1b0f95a8841765b39204e64d07
 DIST audacious-plugins-1.5.0.tgz 2961507 RMD160 0a44cdd99819b9769b5b260dc41d546278a64039 SHA1 7cd157b0663674e6c271cb0353fb91e068f91f7e SHA256 566bc8cb73967f85fc08cb9d6de90fd4e066fa7fa137614b3c71a93eadaf6552
 DIST audacious-plugins-1.5.1.tgz 2944448 RMD160 4b9fc29ccf61d1a503f10f060cbdee8b148f28b8 SHA1 630c936027c66649795cac7327cf6ab3590d3e49 SHA256 aed33732c55566604a24cd2cd1751c24d159ff8eca510647c5c3c7889fd8ae15
-DIST audacious-plugins-2.0-alpha3.tgz 3544126 RMD160 8eb0e7257eaac048157ea658fb4fecc5bf1f4a26 SHA1 9d06c358c9f1fe58c2c051bd7f88cfdd268d0ecd SHA256 223f08215df802b4857770f19e75b002a2e36c0766d6f957e27724ea92ae6b2b
-DIST audacious-plugins-2.0-beta1.tgz 3499113 RMD160 3b18aa81fd26dff0696f592b291d6046cf588ef5 SHA1 96ed3f50de19bfd88fe16d8e0cf8289377b1cedb SHA256 f4e612b5aa9e6d2319fcd65708de5c9d1b989fdfe87b77a9b7d0cf2044dd7a2a
+DIST audacious-plugins-2.0.0.tgz 3505105 RMD160 b62b977525f5d78b29f247f23a1d63a508cfad81 SHA1 f99cd58c0e5423aaa0023f9d756c4bfff52d9c77 SHA256 50af80bc05071ed295699e75289f4f4631995561ddb38e3a9fafcae8cd121ce4
 EBUILD audacious-plugins-1.4.4.ebuild 2930 RMD160 4c54575d68afc4a08f686fa747e53bd422263dc9 SHA1 86d91854a84393448806aee14f86356eb71e73a9 SHA256 ec8c63a0f3869590b2e90f2d11869e484f5883bc1e83813ec8d6f477250a52f5
 EBUILD audacious-plugins-1.4.5.ebuild 2932 RMD160 5f581d853ad790f73b3ba0123d971cdd80496395 SHA1 4890d6abf49c2c79f8e5dc791d16e7cc242b53c1 SHA256 456b723de4ddbba641977a2b9788c87e1223f7315380a37f5d8de75eb9800e9a
 EBUILD audacious-plugins-1.5.0.ebuild 2910 RMD160 61a1cdbe50528b7c139bde0d6620e9f608656cdc SHA1 a909d841337ec6bde45390ee4e6702c05474b2d5 SHA256 b81c1fbe068633518567821f74a75fdf11e9bda6e6165ce8c9e487d1b57ff2c9
@@ -16,14 +15,13 @@ EBUILD audacious-plugins-1.5.1-r1.ebuild 3114 RMD160 6aac54bfcc9836f9aa56577978f
 EBUILD audacious-plugins-1.5.1-r2.ebuild 3320 RMD160 33ec5b194625584203310c6c46ef7c4ff01813af SHA1 f11277ccfbc9b6bb96038d4f78b4cbeb041ea4b0 SHA256 82f128ed331f224e1ce033a4a1cc777cf68a6480e8bef3563119ce402bf14065
 EBUILD audacious-plugins-1.5.1-r3.ebuild 3345 RMD160 5f966da48fdba4bc70ce1feb1dea5836c4969773 SHA1 1c23f90575ac5737893dfe873fd706dbd6b9000b SHA256 031b9a34c94295d868b4165ab6cb788d137aad1d349bf2172478557b77ac7587
 EBUILD audacious-plugins-1.5.1.ebuild 2919 RMD160 4181d5605b803f7f4e9320d5cd2fe535d948a06a SHA1 dc2408af6fbfebe33284c95f15de22527452996d SHA256 87d14452e1b5afbe160633257128a6e6bab3508e02f12122d65b9889545cc54a
-EBUILD audacious-plugins-2.0_alpha3.ebuild 3342 RMD160 2b7dda9f91fa167351d6b20f652e547263b200a7 SHA1 dcb37b803d3fc87077fad10d09673a4ef9ac4b3a SHA256 9d70c8e162ee89a5096be325a3e196a5de6c3c32d9585e6d67fc0f433a2cc569
-EBUILD audacious-plugins-2.0_beta1.ebuild 3329 RMD160 84faece6d89dc5d657d978a25a7f4e82c58980db SHA1 7ab87582e61f2db3ef634daab2790e52378e4d98 SHA256 09ccc7635c622e8718d8fba9e6cdb062a6c9d631267c818830c2dfa04f9d5066
-MISC ChangeLog 22677 RMD160 4d30a900018b403406a932a3d14a868ffe429129 SHA1 a8bd902c9ca6941e88e9a560cf80d1e1ef743ba8 SHA256 12b36604db3523f062e6d6f5660ba0f5eb8b28569b46c968c9c88088b4801194
+EBUILD audacious-plugins-2.0.0.ebuild 3268 RMD160 8f3a605014458e7ac28b8256282005dee114c054 SHA1 8e82d41865c242dcee2854718a3dce0bf427eed0 SHA256 195d8cc291c1858bdb800a008bcf542d7122c511af331dc3c48c7b668ee69ffb
+MISC ChangeLog 22952 RMD160 4fc935e813365b1b34ad4249c0039e29c3942492 SHA1 2a7867b83d03823fa7848b17aa08252ea1b30c0b SHA256 cbb1edc3a5f8713ef12cfb1939ace59be17a70ee67d9892fe023c5737d74328f
 MISC metadata.xml 925 RMD160 e8ccc4eb147a08d9f7463521f1f6902e89c51edb SHA1 3cf168ac849dac10ec9d3cba2eecedbe53081c71 SHA256 1fb95ec4d68e6d8963769d40b0f4813422c6391bee4c6ee32586a71ca31c56a8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoJ9JQACgkQp5vW4rUFj5pWUgCgwRcF+c71qvSDwgiO1iRdaSNS
-MIkAnRIoNAg4uunitTWSdjDxxCPwsnLP
-=Q9cx
+iEYEARECAAYFAkoKEXYACgkQp5vW4rUFj5oElgCfT6g7SBqDvidlpuXYuAeB5INs
+4GgAoKp/dFwp5o61UJjW0aUP+fGsKvE7
+=a4hb
 -----END PGP SIGNATURE-----
