@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/audacious-plugins/Attic/audacious-plugins-2.0_beta1.ebuild,v 1.1 2009/05/12 22:13:26 chainsaw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/audacious-plugins/Attic/audacious-plugins-2.0.0.ebuild,v 1.1 2009/05/13 00:16:41 chainsaw Exp $
 
 inherit eutils flag-o-matic
 
@@ -13,18 +13,17 @@ SRC_URI="http://distfiles.atheme.org/${MY_P}.tgz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-IUSE="adplug alsa arts cdaudio esd flac gnome icecast ipv6 jack lirc mp3 mtp musepack nls oss pulseaudio scrobbler sdl sid sndfile sse2 timidity tta vorbis wavpack wma"
+IUSE="adplug alsa cdaudio esd flac gnome icecast ipv6 jack lirc mp3 mtp musepack nls oss pulseaudio scrobbler sdl sid sndfile sse2 timidity tta vorbis wavpack wma"
 
 RDEPEND="app-arch/unzip
 	>=dev-libs/libcdio-0.79-r1
 	>=dev-libs/dbus-glib-0.60
 	dev-libs/libxml2
-	>=media-sound/audacious-2.0_beta1
+	>=media-sound/audacious-2.0.0
 	>=net-misc/neon-0.26.4
 	>=x11-libs/gtk+-2.14
 	adplug? ( >=dev-cpp/libbinio-1.4 )
 	alsa? ( >=media-libs/alsa-lib-1.0.16 )
-	arts? ( kde-base/arts )
 	cdaudio? ( >=media-libs/libcddb-1.2.1 )
 	esd? ( >=media-sound/esound-0.2.38-r1 )
 	flac? ( >=media-libs/libvorbis-1.0
@@ -78,7 +77,6 @@ src_compile() {
 		$(use_enable adplug) \
 		$(use_enable alsa) \
 		$(use_enable alsa bluetooth) \
-		$(use_enable arts) \
 		$(use_enable cdaudio) \
 		$(use_enable esd) \
 		$(use_enable flac flacng) \
